tests/typechecker/should_fail/simple_modules_5.csp
module X
    g = 4
exports
    f = 2
    g = 5
endmodule

